--- a/classicnewyorkcheesecake.html
+++ b/classicnewyorkcheesecake.html
@@ -53,7 +53,7 @@
                   <br>
               </div>
           </div> 
-           <button><i class="fa-solid fa-money-check"><br></i>Buy</button> 
+           <a class="button" href="message-recieved.html">Order Here</a>
         
       </body>
 </html>
