--- a/rump.html
+++ b/rump.html
@@ -52,8 +52,8 @@
                   </div>
                   <br>
               </div>
-          </div> 
-           <button><i class="fa-solid fa-money-check"><br></i>Buy</button> 
-        
+          </div>
+           <a class="button" href="message-recieved.html">Order Here</a>
+
       </body>
 </html>
