--- a/colddrinks.html
+++ b/colddrinks.html
@@ -49,7 +49,7 @@
                   </div>          
               </div>
           </div> 
-           <button><i class="fa-solid fa-money-check"><br></i>Buy</button> 
+          <a class="button" href="message-recieved.html">Order Here</a>
         
       </body>
 </html>
